--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div>
             <h1> Селянко Сергей Григорьевич </h1>
             <p class="img">
-            <img src="image/img1.jpg" height="250" alt="Это Я" title="Это Я!">
+            <img src="img/img1.jpg" height="250" alt="Это Я" title="Это Я!">
             </p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             <hr>
